syntax = "proto3";

option go_package = "github.com/beam-cloud/airstore/proto";

package worker;

service WorkerService {
  // Worker lifecycle
  rpc RegisterWorker(RegisterWorkerRequest) returns (RegisterWorkerResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc UpdateStatus(UpdateStatusRequest) returns (UpdateStatusResponse);
  rpc Deregister(DeregisterRequest) returns (DeregisterResponse);
  rpc GetWorker(GetWorkerRequest) returns (GetWorkerResponse);
  rpc ListWorkers(ListWorkersRequest) returns (ListWorkersResponse);
  
  // Task results
  rpc SetTaskResult(SetTaskResultRequest) returns (SetTaskResultResponse);

  // Network/IP management for sandboxes
  rpc AllocateIP(AllocateIPRequest) returns (AllocateIPResponse);
  rpc ReleaseIP(ReleaseIPRequest) returns (ReleaseIPResponse);
}

// Worker registration
message RegisterWorkerRequest {
  string hostname = 1;
  string pool_name = 2;
  int64 cpu = 3;
  int64 memory = 4;
  string version = 5;
}

message RegisterWorkerResponse {
  string worker_id = 1;
}

// Heartbeat
message HeartbeatRequest {
  string worker_id = 1;
}

message HeartbeatResponse {}

// Status update
message UpdateStatusRequest {
  string worker_id = 1;
  string status = 2;
}

message UpdateStatusResponse {}

// Deregistration
message DeregisterRequest {
  string worker_id = 1;
}

message DeregisterResponse {}

// Get worker info
message GetWorkerRequest {
  string worker_id = 1;
}

message GetWorkerResponse {
  string id = 1;
  string status = 2;
  string pool_name = 3;
  string hostname = 4;
  int64 cpu = 5;
  int64 memory = 6;
  int64 last_seen_at = 7;
  int64 registered_at = 8;
  string version = 9;
}

// List workers
message ListWorkersRequest {}

message ListWorkersResponse {
  repeated GetWorkerResponse workers = 1;
}

// Task result reporting
message SetTaskResultRequest {
  string task_id = 1;
  int32 exit_code = 2;
  string error = 3;
}

message SetTaskResultResponse {}

// IP allocation for sandbox networking
message AllocateIPRequest {
  string sandbox_id = 1;
  string worker_id = 2;
}

message AllocateIPResponse {
  string ip = 1;
  string gateway = 2;
  int32 prefix_len = 3;
}

message ReleaseIPRequest {
  string sandbox_id = 1;
}

message ReleaseIPResponse {}

